--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel='stylesheet' href='assets/css/styles.css'>
 </head>
 
-<body class='theme-dark'>
+<body class='theme-light'>
 
   <header class='header'>
     <h1 class='page-title'>Social Media Dashboard</h1>
