--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       <span class='acct acct-facebook'>@nathanf</span>
       <span class='flwr-count'>1987</span>
       <span class='flwr-label'>Followers</span>
-      <span class='val-change val-change--up'>12 Today</span>
+      <span class='val-change val-change--up' aria-label='Up 12 Today'>12 Today</span>
     </div>
 
     <div class='card card-main card-main--twitter'>
       <span class='acct acct-twitter'>@nathanf</span>
       <span class='flwr-count'>1044</span>
       <span class='flwr-label'>Followers</span>
-      <span class='val-change val-change--up'>99 Today</span>
+      <span class='val-change val-change--up' aria-label='Up 99 Today'>99 Today</span>
     </div>
    
     <div class='card card-main card-main--instagram'>
@@ -41,14 +41,14 @@
       <span class='acct acct-instagram'>@realnathanf</span>
       <span class='flwr-count'>11k</span>
       <span class='flwr-label'>Followers</span>
-      <span class='val-change val-change--up'>1099 Today</span>
+      <span class='val-change val-change--up' aria-label='Up 1099 Today'>1099 Today</span>
     </div>
 
     <div class='card card-main card-main--youtube'>
       <span class='acct acct-youtube'>Nathan F.</span>
       <span class='flwr-count'>8239</span>
       <span class='flwr-label'>Subscribers</span>
-      <span class='val-change val-change--down'>144 Today</span>
+      <span class='val-change val-change--down' aria-label='Down 12 Today'>144 Today</span>
     </div>
   </section>
 
@@ -59,56 +59,56 @@
       <span class='card-title'>Page Views</span>
       <span class='card-logo'><img src='./assets/images/icon-facebook.svg' alt='Facebook logo'></span>
       <span class='card-value'>87</span>
-      <span class='val-change val-change--up'>3%</span>
+      <span class='val-change val-change--up' aria-label='Up 3%'>3%</span>
     </div>
 
     <div class='card card-small card-small--facebook'>
       <span class='card-title'>Likes</span>
       <span class='card-logo'><img src='./assets/images/icon-facebook.svg' alt='Facebook logo'></span>
       <span class='card-value'>52</span>
-      <span class='val-change val-change--down'>2%</span>
+      <span class='val-change val-change--down' aria-label='Down 2%'>2%</span>
     </div>
 
     <div class='card card-small card-small--instagram'>
       <span class='card-title'>Likes</span>
       <span class='card-logo'><img src='./assets/images/icon-instagram.svg' alt='Instagram logo'></span>
       <span class='card-value'>5462</span>
-      <span class='val-change val-change--up'>2257%</span>
+      <span class='val-change val-change--up' aria-label='Up 2257%'>2257%</span>
     </div>
 
     <div class='card card-small card-small--instagram'>
       <span class='card-title'>Profile Views</span>
       <span class='card-logo'><img src='./assets/images/icon-instagram.svg' alt='Instagram logo'></span>
       <span class='card-value'>52k</span>
-      <span class='val-change val-change--up'>1375%</span>
+      <span class='val-change val-change--up' aria-label='Up 1375%'>1375%</span>
     </div>
 
     <div class='card card-small card-small--twitter'>
       <span class='card-title'>Retweets</span>
       <span class='card-logo'><img src='./assets/images/icon-twitter.svg' alt='Twitter logo'></span>
       <span class='card-value'>117</span>
-      <span class='val-change val-change--up'>303%</span>
+      <span class='val-change val-change--up' aria-label='Up 303%'>303%</span>
     </div>
 
     <div class='card card-small card-small--twitter'>
       <span class='card-title'>Likes</span>
       <span class='card-logo'><img src='./assets/images/icon-twitter.svg' alt='Twitter logo'></span>
       <span class='card-value'>507</span>
-      <span class='val-change val-change--up'>553%</span>
+      <span class='val-change val-change--up' aria-label='Up 553%'>553%</span>
     </div>
 
     <div class='card card-small card-small--youtube'>
       <span class='card-title'>Likes</span>
       <span class='card-logo'><img src='./assets/images/icon-youtube.svg' alt='YouTube logo'></span>
       <span class='card-value'>107</span>
-      <span class='val-change val-change--down'>19%</span>
+      <span class='val-change val-change--down' aria-label='Down 19%'>19%</span>
     </div>
 
     <div class='card card-small card-small--youtube'>
       <span class='card-title'>Total Views</span>
       <span class='card-logo'><img src='./assets/images/icon-youtube.svg' alt='YouTube logo'></span>
       <span class='card-value'>1407</span>
-      <span class='val-change val-change--down'>12%</span>
+      <span class='val-change val-change--down' aria-label='Down 12%'>12%</span>
     </div>
   </section>
 
